Transformando HTML a EJS

--- a/public/css/admin/avisos.css
+++ b/public/css/admin/avisos.css
@@ -45,7 +45,7 @@ main .Content .Reportes--Container .aviso .Input--Container{
     flex-flow: column;
     padding: 10px;
     border-radius: 15px;
-    background-color: #F4F4F4;
+    background-color: var(--PrimaryColor);
     border: 1px solid var(--SecondaryColor);
 }
 main .Content .Reportes--Container .aviso .Input--Container span{
@@ -68,7 +68,7 @@ main .Content .Reportes--Container .aviso .Input--Container .Input input{
     border: none;
     outline: none;
     transition: .1s linear;
-    background-color: #F4F4F4;
+    background-color: var(--PrimaryColor);
 }
 main .Content .Reportes--Container .aviso .Input--Container .Input input::placeholder{
     color: var(--ColorNavigatorBar);
@@ -132,24 +132,27 @@ main .Content .Table--Container{
 }
 main .Content .Table--Container table{
     border: 1px solid #aaa;
-    border-top: none;
     padding: 5px;
-    border-radius: 5px;
+    border-radius: 15px;
     border-spacing: 0;
+    height: 300px;
+    display: block;
+    overflow-y: auto;
 }
 main .Content .Table--Container table caption{
-    border: 1px solid #aaa;
     border-radius: 5px;
     border-bottom: none;
-    font-size: 1.4em;
+    font-size: 1.2em;
     text-transform: capitalize;
     font-weight: 600;
     padding: 5px;
     letter-spacing: 1px;
 }
 main .Content .Table--Container table th{
-    padding: 5px 122px;
+    padding: 10px 120px;
     border: 1px solid #aaa;
+    border-left: none;
+    border-right: none;
 }
 
 main .Content .Table--Container table tr{
@@ -157,15 +160,11 @@ main .Content .Table--Container table tr{
 }
 main .Content .Table--Container table td{
     text-align: center;
-    padding: 3px 0px;
+    padding: 5px 15px;
     font-size: 1.2em;
-}
-main .Content .Table--Container table td:nth-child(1){
-    text-align: left;
-    padding-left: 5px;
 }
 main .Content .Table--Container table tbody tr:hover{
     background-color: var(--ColorNavigatorBar);
-    color: var(--HoverColor);
+    color: var(--PrimaryColor);
 }
 
