--- a/src/routes/admin/proveedor.ejs
+++ b/src/routes/admin/proveedor.ejs
@@ -17,22 +17,22 @@
     <nav class="Navigator--bar">
         <ul class="Navigator--bar List">
             <a href="/admin/dashboard" class="Link">
-                <Li class="List--cont"><img alt="Proveedores" src="/images/icons/Home.png" title="Home"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg></Li>
             </a>
             <a href="/admin/inventario" class="Link">
-                <Li class="List--cont"><img alt="Inventario" src="/images/icons/Inventario.png" title="Inventario"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M620-163 450-333l56-56 114 114 226-226 56 56-282 282Zm220-397h-80v-200h-80v120H280v-120h-80v560h240v80H200q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h167q11-35 43-57.5t70-22.5q40 0 71.5 22.5T594-840h166q33 0 56.5 23.5T840-760v200ZM480-760q17 0 28.5-11.5T520-800q0-17-11.5-28.5T480-840q-17 0-28.5 11.5T440-800q0 17 11.5 28.5T480-760Z"/></svg></Li>
             </a>
             <a href="/admin/estadistica" class="Link">
-                <Li class="List--cont"><img alt="Estadistica" src="/images/icons/Estadistica.png" title="Estadistica"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="m105-233-65-47 200-320 120 140 160-260 109 163q-23 1-43.5 5.5T545-539l-22-33-152 296ZM863-40 738-165q-20 14-44.5 21t-50.5 7q-75 0-127.5-52.5T463-317q0-75 52.5-127.5T643-497q75 0 127.5 52.5T823-317q0 26-7 50.5T795-221L920-97l-57 57ZM643-217q42 0 71-29t29-71q0-42-29-71t-71-29q-42 0-71 29t-29 71q0 42 29 71t71 29Zm89-320q-19-8-39.5-13t-42.5-6l205-324 65 47-188 296Z"/></svg></Li>
             </a>
             <a href="/admin/proveedor" class="Link">
-                <Li class="List--cont"><img alt="Proveedores" src="/images/icons/proveedor.png" title="Proveedores"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M0-240v-63q0-43 44-70t116-27q13 0 25 .5t23 2.5q-14 21-21 44t-7 48v65H0Zm240 0v-65q0-32 17.5-58.5T307-410q32-20 76.5-30t96.5-10q53 0 97.5 10t76.5 30q32 20 49 46.5t17 58.5v65H240Zm540 0v-65q0-26-6.5-49T754-397q11-2 22.5-2.5t23.5-.5q72 0 116 26.5t44 70.5v63H780Zm-455-80h311q-10-20-55.5-35T480-370q-55 0-100.5 15T325-320ZM160-440q-33 0-56.5-23.5T80-520q0-34 23.5-57t56.5-23q34 0 57 23t23 57q0 33-23 56.5T160-440Zm640 0q-33 0-56.5-23.5T720-520q0-34 23.5-57t56.5-23q34 0 57 23t23 57q0 33-23 56.5T800-440Zm-320-40q-50 0-85-35t-35-85q0-51 35-85.5t85-34.5q51 0 85.5 34.5T600-600q0 50-34.5 85T480-480Zm0-80q17 0 28.5-11.5T520-600q0-17-11.5-28.5T480-640q-17 0-28.5 11.5T440-600q0 17 11.5 28.5T480-560Zm1 240Zm-1-280Z"/></svg></Li>
             </a>
-            <a href="/admin/envios" class="Link">
-                <Li class="List--cont"><img alt="Envios/pedidos" src="/images/icons/Envios.png" title="Envios/pedidos"></Li>
+            <a href="" class="Link">
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M240-160q-50 0-85-35t-35-85H40v-440q0-33 23.5-56.5T120-800h560v160h120l120 160v200h-80q0 50-35 85t-85 35q-50 0-85-35t-35-85H360q0 50-35 85t-85 35Zm0-80q17 0 28.5-11.5T280-280q0-17-11.5-28.5T240-320q-17 0-28.5 11.5T200-280q0 17 11.5 28.5T240-240ZM120-360h32q17-18 39-29t49-11q27 0 49 11t39 29h272v-360H120v360Zm600 120q17 0 28.5-11.5T760-280q0-17-11.5-28.5T720-320q-17 0-28.5 11.5T680-280q0 17 11.5 28.5T720-240Zm-40-200h170l-90-120h-80v120ZM360-540Z"/></svg></Li>
             </a>
             <a href="/admin/avisos" class="Link">
-                <Li class="List--cont"><img alt="Avisos" src="/images/icons/Reporte.png" title="Avisos"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M480-280q17 0 28.5-11.5T520-320q0-17-11.5-28.5T480-360q-17 0-28.5 11.5T440-320q0 17 11.5 28.5T480-280Zm-40-160h80v-240h-80v240ZM330-120 120-330v-300l210-210h300l210 210v300L630-120H330Zm34-80h232l164-164v-232L596-760H364L200-596v232l164 164Zm116-280Z"/></svg></Li>
             </a>
         </ul>
     </nav>
@@ -42,24 +42,24 @@
                 <h1>Vista de proveedor</h1>
                 <article class="Nombre--proveedor">
                     <span>Nombre del Proveedor</span>
-                    <h3><%= proveedor[0].nombre %></h3>
+                    <h3><%= proveedor[0].nombre ? proveedor[0].nombre : 'No hay proveedor' %></h3>
                 </article>
                 <article class="Tlf--proveedor">
                     <span>Telefono del proveedor</span>
-                    <h3><%= proveedor[0].telefono %></h3>
+                    <h3><%= proveedor[0].telefono ? proveedor[0].telefono : 'No hay telefono' %></h3>
                 </article>
                 <article class="Ubi--proveedor">
                     <span>Ubicación</span>
-                    <h3><%= proveedor[0].ubicacion %></h3>
+                    <h3><%= proveedor[0].ubicacion ? proveedor[0].ubicacion : 'No hay ubicacion' %></h3>
                 </article>
                 <article class="Rif--proveedor">
                     <span>RIF</span>
-                    <h3><%= proveedor[0].rif %></h3>
+                    <h3><%= proveedor[0].rif ? proveedor[0].rif : 'No hay RIF' %></h3>
                 </article>
                 <article class="Icon--proveedor">
-                    <img src="/images/icons/Añadir--white.png" alt="Agregar" title="Agregar proveedor">
-                    <img src="/images/icons/Eliminar--white.png" alt="Eliminar" title="Eliminar proveedor">
-                    <img src="/images/icons/Pencil--white.png" alt="Modificar" title="Modificar proveedor">
+                    <img src="/images/icons/Añadir--white.png" alt="Agregar" title="Agregar proveedor" id="Agregar">
+                    <img src="/images/icons/Pencil--white.png" alt="Modificar" title="Modificar proveedor" id="Modificar">
+                    <img src="/images/icons/Eliminar--white.png" alt="Eliminar" title="Eliminar proveedor" id="Eliminar">
                 </article>
             </section>
             <section class="Table--Container">
@@ -80,25 +80,125 @@
                             <th>Ubicación</th>
                             <th>Fecha de Compra</th>
                             <th>Fecha de Entrega</th>
-                                                </tr>
+                        </tr>
                     </thead>
                     <tbody>
-                        <% proveedor.forEach(proveedor => { %>
-                        <tr>
-                            <td><%= proveedor.id %></td>
-                            <td><%= proveedor.nombre %></td>
-                            <td><%= proveedor.telefono %></td>
-                            <td><%= proveedor.rif %></td>
-                            <td><%= proveedor.ubicacion %></td>
-                            <td><%= proveedor.fecha_compra.toLocaleDateString() %></td>
-                            <td><%= proveedor.fecha_entrega.toLocaleDateString() %></td>
-                        </tr>
+                        <% proveedor.forEach((proveedor) => { %>
+                            <tr>
+                                <td><%= proveedor.id %></td>
+                                <td><%= proveedor.nombre %></td>
+                                <td><%= proveedor.telefono %></td>
+                                <td><%= proveedor.rif %></td>
+                                <td><%= proveedor.ubicacion %></td>
+                                <td><%= proveedor.fecha_compra.toLocaleDateString() %></td>
+                                <td><%= proveedor.fecha_entrega.toLocaleDateString() %></td>
+                            </tr>
                         <% }) %>
                     </tbody>
                 </table>
             </section>
-            
         </div>
+        <dialog id="dialog--1">
+            <span id="CerrarAgregar">X</span>
+            <h2>Agregar Proveedor</h2>
+            <form>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Nombre--proveedor">Nombre del Proveedor</label>
+                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--proveedor">
+                    </div>
+                    <div>
+                        <label for="Apellido--proveedor">Apellido del Proveedor</label>
+                        <input placeholder="Ingrese el apellido del proveedor" required id="Apellido--proveedor">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="RIF">RIF</label>
+                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF">
+                    </div>
+                    <div>
+                        <label for="Bebida">Producto del Proveedor</label>
+                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Ubicación">Ubicación del Proveedor</label>
+                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación">
+                    </div>
+                    <div>
+                        <label for="Telefono">Telefono del proveedor</label>
+                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Fecha--compra">Fecha de compra</label>
+                        <input type="date" id="Fecha--compra" required>
+                    </div>
+                    <div>
+                        <label for="Fecha--entrega">Fecha de entrega</label>
+                        <input type="date" id="Fecha--entrega" required>
+                    </div>
+                </div>
+                <button type="submit" id="SubmitAgregar">Agregar</button>
+            </form>
+        </dialog>
+        <dialog id="dialog--2">
+            <span id="CerrarModificar">X</span>
+            <h2>Modificar Proveedor</h2>
+            <form>
+                <div class="Input--Container">
+                    <div>
+                        <label for="ID">Id</label>
+                        <input placeholder="Ingrese el id del proveedor que quiere modificar" required id="ID--proveedor">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Nombre--proveedor">Nombre del Proveedor</label>
+                        <input placeholder="Ingrese el nombre del proveedor" required id="Nombre--proveedor">
+                    </div>
+                    <div>
+                        <label for="Apellido--proveedor">Apellido del Proveedor</label>
+                        <input placeholder="Ingrese el apellido del proveedor" required id="Apellido--proveedor">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="RIF">RIF</label>
+                        <input placeholder="Ingrese el RIF del proveedor" required id="RIF">
+                    </div>
+                    <div>
+                        <label for="Bebida">Producto del Proveedor</label>
+                        <input placeholder="Ingrese el producto que vended el proveedor" required id="Bebida">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Ubicación">Ubicación del Proveedor</label>
+                        <input placeholder="Ingrese la ubcación del proveedor" required id="Ubicación">
+                    </div>
+                    <div>
+                        <label for="Telefono">Telefono del proveedor</label>
+                        <input placeholder="Ingrese el telefono del proveedor" required id="Telefono">
+                    </div>
+                </div>
+                <div class="Input--Container">
+                    <div>
+                        <label for="Fecha--compra">Fecha de compra</label>
+                        <input type="date" id="Fecha--compra" required>
+                    </div>
+                    <div>
+                        <label for="Fecha--entrega">Fecha de entrega</label>
+                        <input type="date" id="Fecha--entrega" required>
+                    </div>
+                </div>
+                <button type="submit" id="SubmitModificar">Modificar</button>
+            </form>
+        </dialog>
     </main>
+    <script src="/js/admin/proveedor.js"></script>
 </body>
 </html>
