--- a/public/css/admin/inventario.css
+++ b/public/css/admin/inventario.css
@@ -14,25 +14,21 @@
 /*Main de la view*/
 main{
     position: absolute;
-    top: 105px;
-    left: 185px;
+    top: 95px;
+    left: 165px;
     width: 80%;
     display: flex;
     border-radius: 15px;
     box-shadow: 0 0 5px #000;
     border-radius: 10px;
     flex-flow: column wrap;
-    justify-content: center;
-    margin: auto;
     padding: 20px;
 }
 main .Content{
-    width: 855px;
-    margin: auto;
-    padding: 10px;
+    width: 905px;
     display: flex;
     justify-content: space-between;
-    gap: 15px;
+    padding: 10px;
 }
 main .Content .Inputs--seleccionados{
     display: flex;
@@ -87,48 +83,61 @@ main .Content .icon img:hover{
     border-radius: 30px;
     outline-offset: 1px;
 }
-main .Table--inventario{
+main .Table--inventario {
+    display: flex;
+    justify-content: center;
     position: relative;
+    left: -20px;
     margin-top: 10px;
     padding: 10px;
-    height: 500px;
-    overflow-y: auto;
 }
-main .Table--inventario table{
-    border: 2px solid #aaa;
-    border-radius: 5px;
+  
+main .Table--inventario table {
+    border: 1px solid #aaa;
+    border-radius: 15px;
+    height: 250px;
     padding: 5px 5px;
-    border-top: none;
     border-collapse: collapse;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+    display: block;
 }
-main .Table--inventario table caption{
-    border: 2px solid #aaa;
+  
+main .Table--inventario table caption {
     border-bottom: none;
     border-radius: 5px;
     padding: 8px;
     font-weight: 600;
-    font-size: 1.4em;
+    font-size: 1.2em;
     text-transform: capitalize;
     letter-spacing: 1px;
-}
-main .Table--inventario table th{
+  }
+  
+main .Table--inventario table th {
     padding: 3px 5px;
     border-top: 1px solid #aaa;
     border-bottom: 1px solid #aaa;
     font-weight: 600;
 }
-main .Table--inventario table td{
+  
+main .Table--inventario table td {
     padding: 5px 30px;
     text-align: center;
     font-weight: 500;
     font-size: 1.1em;
 }
-main .Table--inventario table tbody tr{
+  
+main .Table--inventario table tbody tr {
     transition: .1s linear;
 }
-main .Table--inventario table tbody tr:hover{
+  
+main .Table--inventario table tbody tr:hover {
     background-color: var(--ColorNavigatorBar);
-    color: var(--HoverColor);
+    color: var(--PrimaryColor);
+}
+.presionado--bottom{
+    background-color: var(--ColorNavigatorBar);
+    color: var(--PrimaryColor);
 }
 /*Ventana Modal*/
 dialog{
@@ -154,6 +163,21 @@ dialog[open]{
       opacity: 1;
     }
   }
+dialog span{
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    font-size: 1.3em;
+    padding: 5px;
+    width: 30px;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 500ms 0.1s;
+}
+dialog span:hover{
+    background-color: var(--ColorNavigatorBar);
+    color: var(--PrimaryColor);
+}
 dialog h2{
     font-size: 2em;
     letter-spacing: 1px;
@@ -171,6 +195,7 @@ dialog form .input--Container{
     align-items: center;
     width: 550px;
     padding: 5px;
+    gap: 10px;
 }
 dialog form .input--Container div{
     display: flex;
@@ -242,7 +267,7 @@ dialog form button:hover{
 }
 .Eliminar--producto{
     width: 450px;
-    height: 200px;
+    height: 145px;
 }
 .Eliminar--producto form div{
     justify-content: center;
