--- a/src/routes/admin/inventario.ejs
+++ b/src/routes/admin/inventario.ejs
@@ -17,22 +17,22 @@
     <nav class="Navigator--bar">
         <ul class="Navigator--bar List">
             <a href="/admin/dashboard" class="Link">
-                <Li class="List--cont"><img alt="Proveedores" src="/images/icons/Home.png" title="Home"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M240-200h120v-240h240v240h120v-360L480-740 240-560v360Zm-80 80v-480l320-240 320 240v480H520v-240h-80v240H160Zm320-350Z"/></svg></Li>
             </a>
             <a href="/admin/inventario" class="Link">
-                <Li class="List--cont"><img alt="Inventario" src="/images/icons/Inventario.png" title="Inventario"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M620-163 450-333l56-56 114 114 226-226 56 56-282 282Zm220-397h-80v-200h-80v120H280v-120h-80v560h240v80H200q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h167q11-35 43-57.5t70-22.5q40 0 71.5 22.5T594-840h166q33 0 56.5 23.5T840-760v200ZM480-760q17 0 28.5-11.5T520-800q0-17-11.5-28.5T480-840q-17 0-28.5 11.5T440-800q0 17 11.5 28.5T480-760Z"/></svg></Li>
             </a>
             <a href="/admin/estadistica" class="Link">
-                <Li class="List--cont"><img alt="Estadistica" src="/images/icons/Estadistica.png" title="Estadistica"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="m105-233-65-47 200-320 120 140 160-260 109 163q-23 1-43.5 5.5T545-539l-22-33-152 247-121-141-145 233ZM863-40 738-165q-20 14-44.5 21t-50.5 7q-75 0-127.5-52.5T463-317q0-75 52.5-127.5T643-497q75 0 127.5 52.5T823-317q0 26-7 50.5T795-221L920-97l-57 57ZM643-217q42 0 71-29t29-71q0-42-29-71t-71-29q-42 0-71 29t-29 71q0 42 29 71t71 29Zm89-320q-19-8-39.5-13t-42.5-6l205-324 65 47-188 296Z"/></svg></Li>
             </a>
             <a href="/admin/proveedor" class="Link">
-                <Li class="List--cont"><img alt="Proveedores" src="/images/icons/proveedor.png" title="Proveedores"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M0-240v-63q0-43 44-70t116-27q13 0 25 .5t23 2.5q-14 21-21 44t-7 48v65H0Zm240 0v-65q0-32 17.5-58.5T307-410q32-20 76.5-30t96.5-10q53 0 97.5 10t76.5 30q32 20 49 46.5t17 58.5v65H240Zm540 0v-65q0-26-6.5-49T754-397q11-2 22.5-2.5t23.5-.5q72 0 116 26.5t44 70.5v63H780Zm-455-80h311q-10-20-55.5-35T480-370q-55 0-100.5 15T325-320ZM160-440q-33 0-56.5-23.5T80-520q0-34 23.5-57t56.5-23q34 0 57 23t23 57q0 33-23 56.5T160-440Zm640 0q-33 0-56.5-23.5T720-520q0-34 23.5-57t56.5-23q34 0 57 23t23 57q0 33-23 56.5T800-440Zm-320-40q-50 0-85-35t-35-85q0-51 35-85.5t85-34.5q51 0 85.5 34.5T600-600q0 50-34.5 85T480-480Zm0-80q17 0 28.5-11.5T520-600q0-17-11.5-28.5T480-640q-17 0-28.5 11.5T440-600q0 17 11.5 28.5T480-560Zm1 240Zm-1-280Z"/></svg></Li>
             </a>
-            <a href="../Envios/Minorista/Minorista.html" class="Link">
-                <Li class="List--cont"><img alt="Envios/pedidos" src="/images/icons/Envios.png" title="Envios/pedidos"></Li>
+            <a href="/admin/envios" class="Link">
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M240-160q-50 0-85-35t-35-85H40v-440q0-33 23.5-56.5T120-800h560v160h120l120 160v200h-80q0 50-35 85t-85 35q-50 0-85-35t-35-85H360q0 50-35 85t-85 35Zm0-80q17 0 28.5-11.5T280-280q0-17-11.5-28.5T240-320q-17 0-28.5 11.5T200-280q0 17 11.5 28.5T240-240ZM120-360h32q17-18 39-29t49-11q27 0 49 11t39 29h272v-360H120v360Zm600 120q17 0 28.5-11.5T760-280q0-17-11.5-28.5T720-320q-17 0-28.5 11.5T680-280q0 17 11.5 28.5T720-240Zm-40-200h170l-90-120h-80v120ZM360-540Z"/></svg></Li>
             </a>
             <a href="/admin/avisos" class="Link">
-                <Li class="List--cont"><img alt="Avisos" src="/images/icons/Reporte.png" title="Avisos"></Li>
+                <Li class="List--cont"><svg xmlns="http://www.w3.org/2000/svg" height="50px" viewBox="0 -960 960 960" width="50px" fill="#e8eaed"><path d="M480-280q17 0 28.5-11.5T520-320q0-17-11.5-28.5T480-360q-17 0-28.5 11.5T440-320q0 17 11.5 28.5T480-280Zm-40-160h80v-240h-80v240ZM330-120 120-330v-300l210-210h300l210 210v300L630-120H330Zm34-80h232l164-164v-232L596-760H364L200-596v232l164 164Zm116-280Z"/></svg></Li>
             </a>
         </ul>
     </nav>
@@ -70,164 +70,158 @@
                         <th>Tipo</th>
                         <th>Litros</th>
                         <th>Grados de alcohol</th>
+                        <th>Imagen</th>
                         <th>Paquete</th>
                         <th>iva</th>
                         <th>Precio_detal</th>
                         <th>Precio_mayorista</th>
-                        <th>Stock</th>
+                        <th>stock</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <% inventario.forEach(producto => { %>
+                    <% for(let i = 0; i < inventario.length; i++) { %>
                         <tr>
-                            <td><%= producto.id %></td>
-                            <td><%= producto.nombre_producto %></td>
-                            <td><%= producto.tipo %></td>
-                            <td><%= producto.litros %></td>
-                            <td><%= producto.grados %></td>
-                            <td><%= producto.paquete %></td>
-                            <td><%= producto.iva %></td>
-                            <td><%= producto.precio_detal %></td>
-                            <td><%= producto.precio_mayorista %></td>
-                            <td><%= producto.stock %></td>
+                            <td><%= inventario[i].id %></td>
+                            <td><%= inventario[i].nombre_producto %></td>
+                            <td><%= inventario[i].tipo %></td>
+                            <td><%= inventario[i].litros %></td>
+                            <td><%= inventario[i].grados %></td>
+                            <td><%= inventario[i].imagen %></td>
+                            <td><%= inventario[i].paquete %></td>
+                            <td><%= inventario[i].iva %></td>
+                            <td><%= inventario[i].precio_detal %></td>
+                            <td><%= inventario[i].precio_mayorista %></td>
+                            <td><%= inventario[i].stock %></td>
                         </tr>
-                    <% }); %>
+                    <% } %>
                 </tbody>
             </table>
         </section>
+        <dialog id="dialog--1">
+            <span id="Cerrar">X</span>
+            <h2>Agregar Producto</h2>
+            <form>
+                <div class="input--Container">
+                    <div class="Items">
+                        <label for="NombreProducto">Nombre del Producto</label>
+                        <input placeholder="Ingrese el nombre del producto" type="text" id="NombreProducto" required>
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div class="Items">
+                        <select required>
+                            <option value="">Bebida</option>
+                            <option value="">Alcoholica</option>
+                            <option value="">Energetica</option>
+                            <option value="">Te</option>
+                        </select>
+                    </div>
+                    <div class="Items">
+                        <label for="Litros">Litros</label>
+                        <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros">
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div>
+                        <label for="Imagen">Imagen del producto</label>
+                        <input type="file" id="Imagen"/>
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div class="item">
+                        <label for="Paquetes">Paquetes</label>
+                        <input placeholder="Ingrese los paquetes" type="text" id="Paquetes" required>
+                    </div>
+                    <div class="item">
+                        <label for="Iva">Iva</label>
+                        <input placeholder="Ingrese el iva del producto" type="text" id="Iva" required>
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div class="item">
+                        <label for="Precio--detal">Precio detal</label>
+                        <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal" required>
+                    </div>
+                    <div class="item">
+                        <label for="Precio--mayorista">Precio mayorista</label>
+                        <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista" required>
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div class="Items">
+                        <label for="stock">Cantidad de stock</label>
+                        <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock" required>
+                    </div>
+                </div>
+                <button type="submit" id="submit">Agregar</button>
+            </form>
+        </dialog>
+        <dialog id="dialog--2">
+            <span id="Cerrar--ventana">X</span>
+            <h2>Modificar Producto</h2>
+            <form>
+                <div class="input--Container">
+                    <div>
+                        <label for="Modificar--producto">Id</label>
+                        <input type="text" placeholder="Ingrese el id del producto Modificar" id="Modificar--producto" required>
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div class="Items">
+                        <label for="NombreProducto">Nombre del Producto</label>
+                        <input placeholder="Ingrese el nombre del producto" type="text" id="NombreProducto" required>
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div class="Items">
+                        <select required>
+                            <option value="">Bebida</option>
+                            <option value="">Alcoholica</option>
+                            <option value="">Energetica</option>
+                            <option value="">Te</option>
+                        </select>
+                    </div>
+                    <div class="Items">
+                        <label for="Litros">Litros</label>
+                        <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros">
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div>
+                        <label for="Imagen">Imagen del producto</label>
+                        <input type="file" id="Imagen"/>
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div class="item">
+                        <label for="Paquetes">Paquetes</label>
+                        <input placeholder="Ingrese los paquetes" type="text" id="Paquetes" required>
+                    </div>
+                    <div class="item">
+                        <label for="Iva">Iva</label>
+                        <input placeholder="Ingrese el iva del producto" type="text" id="Iva" required>
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div class="item">
+                        <label for="Precio--detal">Precio detal</label>
+                        <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal" required>
+                    </div>
+                    <div class="item">
+                        <label for="Precio--mayorista">Precio mayorista</label>
+                        <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista" required>
+                    </div>
+                </div>
+                <div class="input--Container">
+                    <div class="Items">
+                        <label for="stock">Cantidad de stock</label>
+                        <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock" required>
+                    </div>
+                </div>
+                <button type="submit" id="modified">Modificar</button>
+            </form>
+        </dialog>
     </main>
-    <dialog id="dialog--1">
-        <h2>Agregar Producto</h2>
-        <form>
-            <div class="input--Container">
-                <div class="Items">
-                    <label for="NombreProducto">Nombre del Producto</label>
-                    <input placeholder="Ingrese el nombre del producto" type="text" id="NombreProducto" required>
-                </div>
-            </div>
-            <div class="input--Container">
-                <div class="Items">
-                    <select required>
-                        <option value="">Bebida</option>
-                        <option value="">Alcoholica</option>
-                        <option value="">Energetica</option>
-                        <option value="">Te</option>
-                    </select>
-                </div>
-                <div class="Items">
-                    <label for="Litros">Litros</label>
-                    <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros">
-                </div>
-            </div>
-            <div class="input--Container">
-                <div>
-                    <label for="Imagen">Imagen del producto</label>
-                    <input type="file" id="Imagen"/>
-                </div>
-            </div>
-            <div class="input--Container">
-                <div class="item">
-                    <label for="Paquetes">Paquetes</label>
-                    <input placeholder="Ingrese los paquetes" type="text" id="Paquetes" required>
-                </div>
-                <div class="item">
-                    <label for="Iva">Iva</label>
-                    <input placeholder="Ingrese el iva del producto" type="text" id="Iva" required>
-                </div>
-            </div>
-            <div class="input--Container">
-                <div class="item">
-                    <label for="Precio--detal">Precio detal</label>
-                    <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal" required>
-                </div>
-                <div class="item">
-                    <label for="Precio--mayorista">Precio mayorista</label>
-                    <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista" required>
-                </div>
-            </div>
-            <div class="input--Container">
-                <div class="Items">
-                    <label for="stock">Cantidad de stock</label>
-                    <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock" required>
-                </div>
-            </div>
-            <button type="submit" id="submit">Agregar</button>
-        </form>
-    </dialog>
-    <dialog id="dialog--2" class="Eliminar--producto">
-        <h2>Eliminar Producto</h2>
-        <form>
-            <div>
-                <label for="Eliminar--producto">Id</label>
-                <input type="text" placeholder="Ingrese el id del producto a eliminar" id="Eliminar--producto" required>
-            </div>
-            <button id="delete" type="submit">Eliminar</button>
-        </form>
-    </dialog>
-    <dialog id="dialog--3">
-        <h2>Modificar Producto</h2>
-        <form>
-            <div class="input--Container">
-                <div>
-                    <label for="Modificar--producto">Id</label>
-                    <input type="text" placeholder="Ingrese el id del producto Modificar" id="Modificar--producto" required>
-                </div>
-            </div>
-            <div class="input--Container">
-                <div class="Items">
-                    <label for="NombreProducto">Nombre del Producto</label>
-                    <input placeholder="Ingrese el nombre del producto" type="text" id="NombreProducto" required>
-                </div>
-            </div>
-            <div class="input--Container">
-                <div class="Items">
-                    <select required>
-                        <option value="">Bebida</option>
-                        <option value="">Alcoholica</option>
-                        <option value="">Energetica</option>
-                        <option value="">Te</option>
-                    </select>
-                </div>
-                <div class="Items">
-                    <label for="Litros">Litros</label>
-                    <input placeholder="Ingreso los litros de la bebida" required type="text" id="Litros">
-                </div>
-            </div>
-            <div class="input--Container">
-                <div>
-                    <label for="Imagen">Imagen del producto</label>
-                    <input type="file" id="Imagen"/>
-                </div>
-            </div>
-            <div class="input--Container">
-                <div class="item">
-                    <label for="Paquetes">Paquetes</label>
-                    <input placeholder="Ingrese los paquetes" type="text" id="Paquetes" required>
-                </div>
-                <div class="item">
-                    <label for="Iva">Iva</label>
-                    <input placeholder="Ingrese el iva del producto" type="text" id="Iva" required>
-                </div>
-            </div>
-            <div class="input--Container">
-                <div class="item">
-                    <label for="Precio--detal">Precio detal</label>
-                    <input placeholder="Ingrese el precio detal del producto" type="text" id="Precio--detal" required>
-                </div>
-                <div class="item">
-                    <label for="Precio--mayorista">Precio mayorista</label>
-                    <input placeholder="Ingrese el precio mayorista del producto" type="text" id="Precio--mayorista" required>
-                </div>
-            </div>
-            <div class="input--Container">
-                <div class="Items">
-                    <label for="stock">Cantidad de stock</label>
-                    <input placeholder="Ingrese la Cantidad de stock" type="text" id="stock" required>
-                </div>
-            </div>
-            <button type="submit" id="modified">Modificar</button>
-        </form>
-    </dialog>
+    <script src="/js/admin/inventario.js"></script>
 </body>
-<script src="/js/admin/inventario.js"></script>
 </html>
