--- a/src/routes/admin/dashboard.ejs
+++ b/src/routes/admin/dashboard.ejs
@@ -5,15 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drinkers || Gerente</title>
     <link rel="stylesheet" href="/css/admin/dashboard.css">
-    <link rel="stylesheet" href="/css/admin/header.css">
 </head>
 <body>
-    <header>
-        <div class="Content__header">
-            <img alt="Logo" src="/images/Logo/Logo.png">
-            <a href="/">Salir</a>
-        </div>
-    </header>
+    <%- include('../partials/header'); %>
     <%- include('../partials/navbar'); %>
     <main>
         <section class="Avisos--panel">
