--- a/src/routes/partials/navbar.ejs
+++ b/src/routes/partials/navbar.ejs
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="/css/admin/navbar.css">
 <nav class="Navigator--bar">
     <ul class="Navigator--bar List">
         <a href="/admin/dashboard" class="Link">
